# find-suitable-product-ai-agent

./: README.md  comparison.md  pyproject.toml  report.md  report1.md  report2.md  report3.md
src/find_suitable_product/: crew.py  main.py
src/find_suitable_product/config/: agents.yaml  tasks.yaml
src/find_suitable_product/tools/: brave_search.py
